Make test failures noticable by buildbot.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,7 +13,7 @@ eggs = schooltool.gradebook
 [test]
 recipe = zc.recipe.testrunner
 eggs = schooltool.gradebook
-defaults = ['--tests-pattern', '^f?tests$', '-v']
+defaults = ['--exit-with-status', '--tests-pattern', '^f?tests$', '-v']
 
 [libxml2]
 recipe = zc.recipe.cmmi
