--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 index = http://download.zope.org/zope3.4
 develop = .
-parts = schooltool.gradebook test libxml2
+parts = schooltool.gradebook test
 
 newest = false
 
@@ -14,8 +14,3 @@ eggs = schooltool.gradebook
 recipe = zc.recipe.testrunner
 eggs = schooltool.gradebook
 defaults = ['--exit-with-status', '--tests-pattern', '^f?tests$', '-v']
-
-[libxml2]
-recipe = zc.recipe.cmmi
-url = ftp://xmlsoft.org/libxml2/libxml2-2.6.26.tar.gz
-extra_options = --with-python=${buildout:executable}
