--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,33 @@
 [buildout]
-index = http://download.zope.org/zope3.4
+extends = http://download.zope.org/zope3.4/versions.cfg
+versions = versions
+find-links = http://ftp.schooltool.org/schooltool/releases/nightly/
+             http://ftp.schooltool.org/schooltool/eggs/3.4
 develop = .
-parts = schooltool.gradebook test
+parts = schooltool.gradebook test scripts tags
 
 newest = false
+
+[versions]
+setuptools = 0.6c8
 
 [schooltool.gradebook]
 recipe = zc.recipe.egg
 unzip = true
 eggs = schooltool.gradebook
 
+[scripts]
+recipe = zc.recipe.egg
+unzip = true
+eggs = schooltool.gradebook
+       schooltool.devtools
+       z3c.coverage
+
 [test]
 recipe = zc.recipe.testrunner
 eggs = schooltool.gradebook
 defaults = ['--exit-with-status', '--tests-pattern', '^f?tests$', '-v']
+
+[tags]
+recipe = z3c.recipe.tag:tags
+eggs = schooltool.lyceum.journal
