--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 recursive-include src *.zcml
 recursive-include src *.pt
 recursive-include src *.css
+recursive-include src *.txt
 include version.txt
 include version.txt.in
