Add schooltool.lyceum.journal dependency, update translation template

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,4 +27,4 @@ defaults = ['--exit-with-status', '--tests-pattern', '^f?tests$', '-v']
 
 [tags]
 recipe = z3c.recipe.tag:tags
-eggs = schooltool.lyceum.journal
+eggs = schooltool.gradebook
