--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,29 +1,9 @@
 [buildout]
-extends = http://ftp.schooltool.org/schooltool/1.2/versions.cfg
+extends = http://ftp.schooltool.org/schooltool/1.2/buildout.cfg
 versions = versions
-find-links = http://ftp.schooltool.org/schooltool/1.2/
 develop = .
-parts = schooltool.gradebook test scripts tags
 
-newest = false
+[schooltool]
+eggs += schooltool
+        schooltool.gradebook
 
-[schooltool.gradebook]
-recipe = zc.recipe.egg
-unzip = true
-eggs = schooltool.gradebook
-
-[scripts]
-recipe = zc.recipe.egg
-unzip = true
-eggs = schooltool.gradebook
-       schooltool.devtools
-       z3c.coverage
-
-[test]
-recipe = zc.recipe.testrunner
-eggs = schooltool.gradebook
-defaults = ['--exit-with-status', '--tests-pattern', '^f?tests$', '-v']
-
-[tags]
-recipe = z3c.recipe.tag:tags
-eggs = schooltool.gradebook
