Adapt build improvements from schooltool

--- a/.bzrignore
+++ b/.bzrignore
@@ -1,13 +1,16 @@
-./src/schooltool.gradebook.egg-info
-./bin
 ./build
-./dist
-./python
-./parts
+./bin
 ./develop-eggs
+./dist
+./parts
+./python
 ./.installed.cfg
+./instance
 **/LC_MESSAGES/*.mo
+./src/schooltool.gradebook.egg-info
 ./src/schooltool/gradebook/locales/*
 ./ID
 ./TAGS
 ./tags
+./coverage
+./ftest-coverage
