Doodads and junkins for more convenient porting to new KGS.

--- a/base.cfg
+++ b/base.cfg
@@ -1,5 +1,7 @@
 [buildout]
-extends = http://ftp.schooltool.org/schooltool/1.2/versions.cfg
+#Extend locally specified version set, for easier tracking during porting.
+#extends = http://ftp.schooltool.org/schooltool/1.2/versions.cfg
+extends = versions.cfg
 versions = versions
 newest = false
 find-links = http://ftp.schooltool.org/schooltool/1.2/
