One more porting leftover.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 extends = base.cfg
-develop = . ../schooltool_bugfixes ../schooltool.lyceum.journal_bugfixes
+develop = .
 
 [package]
 eggs = schooltool.gradebook
