--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,12 @@ recursive-include src *.pt
 recursive-include src *.css
 recursive-include src *.pot
 recursive-include src *.po
+recursive-include src *.mo
 recursive-include src *.txt
 include version.txt
 include version.txt.in
 include CHANGES.txt
+include base.cfg
+include buildout.cfg
+include bootstrap.py
+include Makefile
