Build updates from schooltool

--- a/base.cfg
+++ b/base.cfg
@@ -15,8 +15,7 @@ eggs =
 [scripts]
 recipe = zc.recipe.egg:scripts
 unzip = true
-eggs = ${package:eggs}
-       schooltool
+eggs = schooltool
        schooltool.devtools
        z3c.coverage
        z3c.dependencychecker
