Add package:eggs back to scripts:eggs

--- a/base.cfg
+++ b/base.cfg
@@ -15,7 +15,8 @@ eggs =
 [scripts]
 recipe = zc.recipe.egg:scripts
 unzip = true
-eggs = schooltool
+eggs = ${package:eggs}
+       schooltool
        schooltool.devtools
        z3c.coverage
        z3c.dependencychecker
