--- a/base.cfg
+++ b/base.cfg
@@ -19,6 +19,7 @@ eggs = ${package:eggs}
        schooltool.devtools
        z3c.coverage
        z3c.dependencychecker
+interpreter = python
 
 [test]
 recipe = zc.recipe.testrunner
