Include *.js in the tarball.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include src *.zcml
 recursive-include src *.pt
 recursive-include src *.css
+recursive-include src *.js
 recursive-include src *.pot
 recursive-include src *.po
 recursive-include src *.mo
