--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,5 +2,9 @@
 extends = base.cfg
 develop = .
 
+[versions]
+# Unset versions of packages you want to develop
+schooltool.gradebook =
+
 [package]
 eggs = schooltool.gradebook
