--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,4 +10,4 @@ schooltool.gradebook =
 eggs = schooltool.gradebook
 
 [test]
-eggs = schooltool.gradebook [test, attendance]
+eggs = schooltool.gradebook [test]
