Remove apidoc bookchapter

--- a/.bzrignore
+++ b/.bzrignore
@@ -8,7 +8,8 @@
 ./instance
 **/LC_MESSAGES/*.mo
 ./src/schooltool.gradebook.egg-info
-./src/schooltool/gradebook/locales/*
+./src/schooltool/gradebook/locales/??
+./src/schooltool/gradebook/locales/??_??
 ./ID
 ./TAGS
 ./tags
