--- a/base.cfg
+++ b/base.cfg
@@ -1,10 +1,10 @@
 [buildout]
-extends = http://ftp.schooltool.org/schooltool/trunk/versions.cfg
+extends = http://ftp.schooltool.org/schooltool/2.8/versions.cfg
 versions = versions
 newest = false
 find-links =
-    http://ftp.schooltool.org/schooltool/trunk/
-    http://ftp.schooltool.org/schooltool/trunk/dev/
+    http://ftp.schooltool.org/schooltool/2.8/
+    http://ftp.schooltool.org/schooltool/2.8/dev/
 parts = package test supervisor celery scripts ctags omelette
 
 [package]
